--- a/src/app/authentication/components/login/login.component.html
+++ b/src/app/authentication/components/login/login.component.html
@@ -1,2 +1,6 @@
-<app-login-user-form></app-login-user-form>
-<app-create-user-form></app-create-user-form>
+<ng-container *ngIf="createUser;else login">
+    <app-create-user-form (backToLogin)="createUser = false;"></app-create-user-form>
+</ng-container>
+<ng-template #login>
+    <app-login-user-form (createUser)="createUser = true;"></app-login-user-form>
+</ng-template>
